hphp/test/zend/good/Zend/tests/debug_info-error-0.php.expectf

Fatal error: __debugInfo() must return an array in %s/debug_info-error-0.php on line 14
